[gd_scene load_steps=3 format=3 uid="uid://p8ckts4gasuj"]

[ext_resource type="Script" uid="uid://b8ys0o0iuytbv" path="res://Scripts/phone/button.gd" id="1_sjh8s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ww5po"]
radius = 19.4165

[node name="Button4" type="Node2D"]
script = ExtResource("1_sjh8s")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ww5po")

[connection signal="input_event" from="Area2D" to="." method="button4"]
