[gd_scene load_steps=3 format=3 uid="uid://dd72t4py5arf0"]

[ext_resource type="Script" uid="uid://b8ys0o0iuytbv" path="res://Scripts/phone/button.gd" id="1_tbsm5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ww5po"]
radius = 20.0

[node name="Button6" type="Node2D"]
script = ExtResource("1_tbsm5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ww5po")

[connection signal="input_event" from="Area2D" to="." method="button6"]
